--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,15 +1,138 @@
 {% extends 'base.html' %}
+{% load static %}
+
+
 
 {% block content %}
-<h1>Expenses List</h1>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-10">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="">Expenses</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            My Expenses
+          </li>
+        </ol>
+      </nav>
+    </div>
 
-<ul class="list-group">
-    <li class="list-group-item">Bought milk</li>
-    <li class="list-group-item">Bought bread</li>
-    <li class="list-group-item">Bought eggs</li>
-    <li class="list-group-item">Bought cheese</li>
-    <li class="list-group-item">Bought juice</li>
-    <li class="list-group-item">Bought snacks</li>
-    <li class="list-group-item">Bought coffee</li>
-</ul>
-{% endblock %}
+    <div class="col-md-2">
+      <a href="{% url 'add-expense'%}" class="btn btn-primary">Add Expense</a>
+    </div>
+  </div>
+
+  <div class="container">
+    {% include 'partials/_messages.html' %} {% if expenses.count %}
+    <div style="width: 60vw; display: flex; justify-content: space-between">
+      <a href="{% url 'export-excel' %}"class="btn btn-primary">Export Excel</a>
+        <a href="{% url 'export-csv' %}"class="btn btn-secondary">Export CSV</a>
+        <a href="{% url 'export-pdf' %}"class="btn btn-info">Export PDF</a>
+    </div>
+
+
+    
+    <div class="row">
+      <div class="col-md-8"></div>
+      <div class="col-md-4">
+     
+        <div class="form-group">
+          <input style="margin-top: 20px;" type="text" class="form-control" id="searchField" placeholder="Search">
+        </div>
+      </div>
+      
+    </div>
+<div class="app-table">
+
+  <table class="table table-stripped table-hover">
+    <thead>
+      <tr>
+        <th>Amount ({{currency}})</th>
+        <th>Category</th>
+        <th>Description</th>
+        <th>Date</th>
+        <th></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      {% for expense in page_obj%}
+      <tr>
+        <td>{{expense.amount}}</td>
+        <td>{{expense.category}}</td>
+        <td>{{expense.description}}</td>
+        <td>{{expense.date}}</td>
+
+        <td>
+          <a
+            href="{% url 'expense-edit' expense.id  %}"
+            class="btn btn-secondary btn-sm"
+            >Edit</a
+          >
+        </td>
+      </tr>
+
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+
+<p class="no-results" style="display: none;">No results </p>
+    <div class="table-output">
+
+
+      <table class="table table-stripped table-hover">
+        <thead>
+          <tr>
+            <th>Amount ({{currency}})</th>
+            <th>Category</th>
+            <th>Description</th>
+            <th>Date</th>
+            <th></th>
+          </tr>
+        </thead>
+
+        <tbody  class="table-body">
+
+
+        </tbody>
+      </table>
+    </div>
+
+
+
+
+    <div class="pagination-container">
+    <div class="">
+      Showing page {{page_obj.number}} of {{ page_obj.paginator.num_pages }}
+    </div>
+    <ul class="pagination align-right float-right mr-auto">
+      {% if page_obj.has_previous %}
+      <li {% if page_obj.number == 1 %} class="page-item active" {% endif %}><a class="page-link" href="?page=1">&laquo; 1</a></li>
+      <li class="page-item"> <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+      {% endif %}
+
+      {% if page_obj.has_next %}
+      <li class="page-item"> <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+      <li class="page-item"> <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages}} &raquo;</a></li>
+      {% endif %}
+
+
+      </ul>
+    {% endif %}
+  </div>
+</div>
+</div>
+
+<script src="{% static 'js/searchExpenses.js' %}"></script>
+
+
+
+
+</script>
+
+
+
+{% endblock content %}
