--- a/templates/income/index.html
+++ b/templates/income/index.html
@@ -26,6 +26,13 @@
     {% include 'partials/_messages.html' %} 
     {% if income.count %}
 
+    <!-- Export Buttons -->
+    <div style="width: 60vw; display: flex; justify-content: space-between; margin-bottom: 20px;">
+      <a href="{% url 'income-export-excel' %}" class="btn btn-primary">Export Excel</a>
+      <a href="{% url 'income-export-csv' %}" class="btn btn-secondary">Export CSV</a>
+      <a href="{% url 'income-export-pdf' %}" class="btn btn-info">Export PDF</a>
+    </div>
+
     <div class="row">
       <div class="col-md-8"></div>
       <div class="col-md-4">
