--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -3,7 +3,7 @@
   <div class="sidebar-sticky">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link active" href="#" style="font-size: 20px;">
+        <a class="nav-link active" href="{% url 'expenses' %}" style="font-size: 20px;">
           <span data-feather="home"></span>
           Dashboard <span class="sr-only">(current)</span>
         </a>
@@ -22,40 +22,30 @@
 
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
       <span>Summary</span>
-      <a class="d-flex align-items-center text-muted" href="#" aria-label="Add a new report">
+      <a class="d-flex align-items-center text-muted" href="{% url 'stats' %}" aria-label="View summary reports">
         <span data-feather="plus-circle"></span>
       </a>
     </h6>
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
         <a class="nav-link" href="{% url 'stats' %}">
-          Expenses Summary
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <span data-feather="file-text"></span>
-          Income Summary
+          <span data-feather="bar-chart-2"></span>
+          Financial Summary
         </a>
       </li>
     </ul>
 
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
       <span>Settings</span>
-      <a class="d-flex align-items-center text-muted" href="#" aria-label="Add a new report">
-        <span data-feather="plus-circle"></span>
+      <a class="d-flex align-items-center text-muted" href="{% url 'preferences' %}" aria-label="Go to settings">
+        <span data-feather="settings"></span>
       </a>
     </h6>
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
         <a class="nav-link" href="{% url 'preferences' %}">
+          <span data-feather="sliders"></span>
           General
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <span data-feather="file-text"></span>
-          Account
         </a>
       </li>
     </ul>
