--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -22,14 +22,14 @@
 
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
       <span>Summary</span>
-      <a class="d-flex align-items-center text-muted" href="{% url 'stats' %}" aria-label="View summary reports">
+      <a class="d-flex align-items-center text-muted" href="#" aria-label="Add a new report">
         <span data-feather="plus-circle"></span>
       </a>
     </h6>
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
         <a class="nav-link" href="{% url 'stats' %}">
-          <span data-feather="bar-chart-2"></span>
+          <span data-feather="pie-chart"></span>
           Financial Summary
         </a>
       </li>
@@ -37,14 +37,13 @@
 
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
       <span>Settings</span>
-      <a class="d-flex align-items-center text-muted" href="{% url 'preferences' %}" aria-label="Go to settings">
-        <span data-feather="settings"></span>
+      <a class="d-flex align-items-center text-muted" href="#" aria-label="Add a new report">
+        <span data-feather="plus-circle"></span>
       </a>
     </h6>
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
         <a class="nav-link" href="{% url 'preferences' %}">
-          <span data-feather="sliders"></span>
           General
         </a>
       </li>
